syntax = "proto3";

package userservice;

// User Service Definition
service UserService {
  // Kullanıcı kaydı
  rpc RegisterUser (RegisterRequest) returns (UserResponse);
  
  // Kullanıcı girişi
  rpc LoginUser (LoginRequest) returns (LoginResponse);
  
  // Kullanıcı bilgisi getir
  rpc GetUser (GetUserRequest) returns (UserResponse);
  
  // Kullanıcı güncelle
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  
  // Kullanıcı sil
  rpc DeleteUser (DeleteUserRequest) returns (DeleteResponse);
  
  // Tüm kullanıcıları listele (Admin)
  rpc ListUsers (ListUsersRequest) returns (UserListResponse);
}

// Request Messages
message RegisterRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GetUserRequest {
  int32 userId = 1;
}

message UpdateUserRequest {
  int32 userId = 1;
  string firstName = 2;
  string lastName = 3;
  string phone = 4;
}

message DeleteUserRequest {
  int32 userId = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

// Response Messages
message UserResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message UserListResponse {
  bool success = 1;
  string message = 2;
  repeated User users = 3;
  int32 totalCount = 4;
}

// Data Models
message User {
  int32 userId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string role = 6;
  bool isActive = 7;
  string createdAt = 8;
}
