const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const path = require('path');

// Load Proto
const PROTO_PATH = path.join(__dirname, 'user.proto');
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const userProto = grpc.loadPackageDefinition(packageDefinition).userservice;

// Create Client
const client = new userProto.UserService(
  'localhost:50051',
  grpc.credentials.createInsecure()
);

console.log('ğŸ§ª UserService Test Client\n');

// Test 1: RegisterUser
console.log('ğŸ“ Test 1: RegisterUser');
client.RegisterUser({
  email: 'test@smartshop.com',
  password: 'Test123!',
  firstName: 'Test',
  lastName: 'User',
  phone: '05551234599'
}, (error, response) => {
  if (error) {
    console.error('âŒ RegisterUser Error:', error.message);
  } else {
    console.log('âœ… RegisterUser Response:', response);
    
    if (response.success) {
      // Test 2: LoginUser
      console.log('\nğŸ” Test 2: LoginUser');
      client.LoginUser({
        email: 'test@smartshop.com',
        password: 'Test123!'
      }, (error, loginResponse) => {
        if (error) {
          console.error('âŒ LoginUser Error:', error.message);
        } else {
          console.log('âœ… LoginUser Response:', loginResponse);
          
          if (loginResponse.success) {
            const userId = loginResponse.user.userId;
            const token = loginResponse.token;
            console.log('ğŸ« JWT Token:', token);
            
            // Test 3: GetUser
            console.log('\nğŸ‘¤ Test 3: GetUser');
            client.GetUser({ userId: userId }, (error, getUserResponse) => {
              if (error) {
                console.error('âŒ GetUser Error:', error.message);
              } else {
                console.log('âœ… GetUser Response:', getUserResponse);
                
                // Test 4: UpdateUser
                console.log('\nâœï¸ Test 4: UpdateUser');
                client.UpdateUser({
                  userId: userId,
                  firstName: 'Updated',
                  lastName: 'Name',
                  phone: '05559999999'
                }, (error, updateResponse) => {
                  if (error) {
                    console.error('âŒ UpdateUser Error:', error.message);
                  } else {
                    console.log('âœ… UpdateUser Response:', updateResponse);
                    
                    // Test 5: ListUsers
                    console.log('\nğŸ“‹ Test 5: ListUsers');
                    client.ListUsers({ page: 1, pageSize: 5 }, (error, listResponse) => {
                      if (error) {
                        console.error('âŒ ListUsers Error:', error.message);
                      } else {
                        console.log('âœ… ListUsers Response:');
                        console.log('   Total Count:', listResponse.totalCount);
                        console.log('   Users:', listResponse.users.length);
                        
                        // Test 6: DeleteUser
                        console.log('\nğŸ—‘ï¸ Test 6: DeleteUser');
                        client.DeleteUser({ userId: userId }, (error, deleteResponse) => {
                          if (error) {
                            console.error('âŒ DeleteUser Error:', error.message);
                          } else {
                            console.log('âœ… DeleteUser Response:', deleteResponse);
                            console.log('\nâœ… TÃœM TESTLER TAMAMLANDI!');
                            process.exit(0);
                          }
                        });
                      }
                    });
                  }
                });
              }
            });
          }
        }
      });
    }
  }
});

// Test existing user login
setTimeout(() => {
  console.log('\nğŸ” Extra Test: Existing User Login (admin@smartshop.com)');
  client.LoginUser({
    email: 'admin@smartshop.com',
    password: 'hashed_password_123'  // Bu gerÃ§ek ÅŸifre deÄŸil, database'de hash'lenmiÅŸ
  }, (error, response) => {
    if (error) {
      console.error('âŒ Error:', error.message);
    } else {
      console.log('Response:', response.message);
      // Not: Database'deki ÅŸifre bcrypt hash'lenmiÅŸ, bu yÃ¼zden plain text ile giriÅŸ yapamayÄ±z
      // GerÃ§ek test iÃ§in yeni kullanÄ±cÄ± oluÅŸturmalÄ±yÄ±z
    }
  });
}, 2000);
